[gd_scene load_steps=6 format=3 uid="uid://p0qftgs4gok4"]

[ext_resource type="Texture2D" uid="uid://dmynltfhdi0p0" path="res://assets/redox-logo.png" id="1_7xy63"]
[ext_resource type="Script" path="res://Scenes/gameLauncher.gd" id="1_mdlyv"]
[ext_resource type="Texture2D" uid="uid://b7ipv6knlf108" path="res://assets/precipitation-logo.jpg" id="2_m7wpu"]
[ext_resource type="Texture2D" uid="uid://f7htcxth0kpr" path="res://assets/aAndbLogo.png" id="3_0qt38"]
[ext_resource type="Texture2D" uid="uid://gl10b5inpmi1" path="res://assets/user (1).png" id="4_ba154"]

[node name="GameLauncher" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_mdlyv")

[node name="GameSelectScreen" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="REDOXGameSection" type="TextureButton" parent="GameSelectScreen"]
custom_minimum_size = Vector2(334, 0)
layout_mode = 2
offset_right = 334.0
offset_bottom = 648.0
texture_normal = ExtResource("1_7xy63")
ignore_texture_size = true
stretch_mode = 0

[node name="PrecipitationGameSection" type="TextureButton" parent="GameSelectScreen"]
custom_minimum_size = Vector2(334, 0)
layout_mode = 2
offset_left = 338.0
offset_right = 672.0
offset_bottom = 648.0
texture_normal = ExtResource("2_m7wpu")
ignore_texture_size = true
stretch_mode = 0

[node name="AcidAndBaseGameSection" type="TextureButton" parent="GameSelectScreen"]
custom_minimum_size = Vector2(334, 0)
layout_mode = 2
offset_left = 676.0
offset_right = 1010.0
offset_bottom = 648.0
texture_normal = ExtResource("3_0qt38")
ignore_texture_size = true
stretch_mode = 6

[node name="UserInfoSection" type="ColorRect" parent="GameSelectScreen"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
offset_left = 1014.0
offset_right = 1164.0
offset_bottom = 648.0
size_flags_horizontal = 8
color = Color(0.117647, 0.117647, 0.117647, 1)

[node name="ScoreLabel" type="Label" parent="GameSelectScreen/UserInfoSection"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.5
offset_right = 30.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 29
text = "Score
0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProfileIcon" type="TextureButton" parent="GameSelectScreen/UserInfoSection"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -100.0
offset_right = 35.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("4_ba154")
ignore_texture_size = true
stretch_mode = 0

[node name="ProfileScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="ProfileScreen"]
custom_minimum_size = Vector2(1150, 648)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.117647, 0.117647, 0.117647, 1)

[node name="Label" type="Label" parent="ProfileScreen"]
layout_mode = 0
offset_left = 111.0
offset_top = 59.0
offset_right = 381.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 37
text = "Profile Settings"

[node name="ColorRect2" type="ColorRect" parent="ProfileScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 114.0
offset_top = 119.0
offset_right = 1045.0
offset_bottom = 462.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="NameLabel" type="Label" parent="ProfileScreen/ColorRect2"]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 81.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 21
text = "Name: "

[node name="EmailLabel" type="Label" parent="ProfileScreen/ColorRect2"]
layout_mode = 0
offset_left = 10.0
offset_top = 47.0
offset_right = 77.0
offset_bottom = 77.0
theme_override_font_sizes/font_size = 21
text = "Email: "

[node name="DashboardLabel" type="Label" parent="ProfileScreen/ColorRect2"]
layout_mode = 0
offset_left = 13.0
offset_top = 92.0
offset_right = 207.0
offset_bottom = 122.0
theme_override_font_sizes/font_size = 21
text = "Dashboard Layout: "

[node name="ChangePasswordButton" type="Button" parent="ProfileScreen/ColorRect2"]
layout_mode = 0
offset_left = 475.0
offset_top = 300.0
offset_right = 620.0
offset_bottom = 331.0
text = "Change Password"

[node name="ChangeEmailButton" type="Button" parent="ProfileScreen/ColorRect2"]
layout_mode = 0
offset_left = 632.0
offset_top = 300.0
offset_right = 777.0
offset_bottom = 331.0
text = "Change Email
"

[node name="LogoutButton" type="Button" parent="ProfileScreen/ColorRect2"]
layout_mode = 0
offset_left = 787.0
offset_top = 300.0
offset_right = 932.0
offset_bottom = 331.0
text = "Logout"

[connection signal="pressed" from="GameSelectScreen/REDOXGameSection" to="." method="_on_redox_game_section_pressed"]
[connection signal="pressed" from="GameSelectScreen/PrecipitationGameSection" to="." method="_on_precipitation_game_section_pressed"]
[connection signal="pressed" from="GameSelectScreen/AcidAndBaseGameSection" to="." method="_on_acid_and_base_game_section_pressed"]
[connection signal="pressed" from="GameSelectScreen/UserInfoSection/ProfileIcon" to="." method="_on_profile_icon_pressed"]
[connection signal="pressed" from="ProfileScreen/ColorRect2/ChangePasswordButton" to="." method="_on_change_password_button_pressed"]
[connection signal="pressed" from="ProfileScreen/ColorRect2/ChangeEmailButton" to="." method="_on_change_email_button_pressed"]
[connection signal="pressed" from="ProfileScreen/ColorRect2/LogoutButton" to="." method="_on_logout_button_pressed"]
